Autoconfig dependency support
Follow up from #204, adds annotation based dependency support to autoconfig.