@@ -33,11 +33,10 @@ import java.lang.reflect.Field;
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Environment(EnvType.CLIENT)
-public final class GuiRegistry implements GuiRegistryAccess {
+public final class GuiRegistry extends AbstractGuiRegistry {
     
     private final Map<Priority, List<ProviderEntry>> providers = new TreeMap<>();
     private final List<TransformerEntry> transformers = new ArrayList<>();
@@ -68,7 +67,7 @@ public final class GuiRegistry implements GuiRegistryAccess {
             Object defaults,
             GuiRegistryAccess registry
     ) {
-        return firstPresent(
+        var guis =  firstPresent(
                 Arrays.stream(Priority.values())
                         .map(priority ->
                                 (Supplier<Optional<ProviderEntry>>) () ->
@@ -79,6 +78,10 @@ public final class GuiRegistry implements GuiRegistryAccess {
         )
                 .map(entry -> entry.provider.get(i18n, field, config, defaults, registry))
                 .orElse(null);
+        
+        this.getLookupTable().register(field, guis);
+        
+        return guis;
     }
     
     @Override
@@ -93,11 +96,13 @@ public final class GuiRegistry implements GuiRegistryAccess {
         List<GuiTransformer> matchedTransformers = this.transformers.stream()
                 .filter(entry -> entry.predicate.test(field))
                 .map(entry -> entry.transformer)
-                .collect(Collectors.toList());
+                .toList();
         
         for (GuiTransformer transformer : matchedTransformers) {
             guis = transformer.transform(guis, i18n, field, config, defaults, registry);
         }
+        
+        this.getLookupTable().register(field, guis);
         
         return guis;
     }
